src/tokenizer/snapshots/reconcile_text__tokenizer__markdown_tokenizer__tests__blockquote.snap
---
source: src/tokenizer/markdown_tokenizer.rs
expression: "markdown_tokenizer(\"> quoted text\\n> more quoted\")"
---
[
    Token {
        normalized: "> quoted",
        original: "> quoted",
        is_left_joinable: false,
        is_right_joinable: true,
    },
    Token {
        normalized: " text",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "text",
        original: "text",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: false,
        is_right_joinable: false,
    },
    Token {
        normalized: "> more",
        original: "> more",
        is_left_joinable: false,
        is_right_joinable: true,
    },
    Token {
        normalized: " quoted",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "quoted",
        original: "quoted",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
