src/tokenizer/snapshots/reconcile_text__tokenizer__markdown_tokenizer__tests__bold_not_confused_with_list.snap
---
source: src/tokenizer/markdown_tokenizer.rs
expression: "markdown_tokenizer(\"**bold text**\")"
---
[
    Token {
        normalized: "**bold",
        original: "**bold",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: " text**",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "text**",
        original: "text**",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
