src/tokenizer/snapshots/reconcile_text__tokenizer__markdown_tokenizer__tests__code_fence.snap
---
source: src/tokenizer/markdown_tokenizer.rs
expression: "markdown_tokenizer(\"```rust\\nlet x = 1;\\n```\")"
---
[
    Token {
        normalized: "```rust",
        original: "```rust",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: false,
        is_right_joinable: false,
    },
    Token {
        normalized: "let",
        original: "let",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: " x",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "x",
        original: "x",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: " =",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "=",
        original: "=",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: " 1;",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "1;",
        original: "1;",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: false,
        is_right_joinable: false,
    },
    Token {
        normalized: "```",
        original: "```",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
