src/tokenizer/snapshots/reconcile_text__tokenizer__markdown_tokenizer__tests__heading_only.snap
---
source: src/tokenizer/markdown_tokenizer.rs
expression: "markdown_tokenizer(\"# \")"
---
[
    Token {
        normalized: "# ",
        original: "# ",
        is_left_joinable: false,
        is_right_joinable: false,
    },
]
