src/tokenizer/snapshots/reconcile_text__tokenizer__markdown_tokenizer__tests__indented_list.snap
---
source: src/tokenizer/markdown_tokenizer.rs
expression: "markdown_tokenizer(\"  - nested item\\n    - deeper\")"
---
[
    Token {
        normalized: "  - nested",
        original: "  - nested",
        is_left_joinable: false,
        is_right_joinable: true,
    },
    Token {
        normalized: " item",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "item",
        original: "item",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: false,
        is_right_joinable: false,
    },
    Token {
        normalized: "    - deeper",
        original: "    - deeper",
        is_left_joinable: false,
        is_right_joinable: true,
    },
]
